<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="farmtechs.autofarm.RegisterActivity"
    android:id="@+id/activity_register"
    android:background="@color/gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_txt"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email_txt"
        android:background="@drawable/whitebox"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/ip_txt"
        android:text="@string/Pi_IP"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/email_input"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ip_input"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ip_txt"
        android:background="@drawable/whitebox"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_ip"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apply_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ip_input"
        android:layout_marginTop="60dp"
        android:background="@drawable/continue_button_effect"/>

</RelativeLayout>
